--- a/app/src/main/res/navigation/starting_nav.xml
+++ b/app/src/main/res/navigation/starting_nav.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/starting_nav"
-    app:startDestination="@id/splahFragment">
+    app:startDestination="@id/SplashFragment">
 
     <fragment
-        android:id="@+id/splahFragment"
-        android:name="com.sedra.sis.SplahFragment"
+        android:id="@+id/SplashFragment"
+        android:name="com.sedra.sis.view.starting.SplashFragment"
         android:label="fragment_splah"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_splahFragment_to_loginFragment"
+            android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.sedra.sis.LoginFragment"
+        android:name="com.sedra.sis.view.auth.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpPersonalDataFragment"
-        android:name="com.sedra.sis.SignUpPersonalDataFragment"
+        android:name="com.sedra.sis.view.auth.signup.SignUpPersonalDataFragment"
         android:label="fragment_sign_up_personal_data"
         tools:layout="@layout/fragment_sign_up_personal_data" >
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpLoginDataFragment"
-        android:name="com.sedra.sis.SignUpLoginDataFragment"
+        android:name="com.sedra.sis.view.auth.signup.SignUpLoginDataFragment"
         android:label="fragment_sign_up_login_data"
         tools:layout="@layout/fragment_sign_up_login_data" />
 </navigation>
