--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
-        android:text="TextView"
+        android:text="350"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
     <TextView
         android:id="@+id/textView18"
         android:layout_width="0dp"
-        android:text="TextView"
+        android:text="5"
         style="@style/workoutValues"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
         app:layout_constraintHorizontal_bias="0.5"
@@ -84,7 +84,7 @@
         android:id="@+id/textView19"
         android:layout_width="0dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView"
+        android:text="155"
         style="@style/workoutValues"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
