--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Search"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search_white"/>
     <item android:title="Shop"
         android:icon="@drawable/ic_shopping_cart"/>
     <item android:title="Home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"/>
     <item android:title="Workout" />
     <item android:title="Profile" />
